* commit af616709c2ce95a19b88e65f2e69418f90d691a0
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sun Jun 22 20:57:10 2014 -0400
| 
|     Hopefully resolved conflicts between parameterfiles/default files/command line input. A 'rank' attribute was added to the options datatype in the options module. The selected value for a parameter is chosen from the (1) command line (2) specified parameter file (3) default file (4) hard-coded default value. Some additional checks to the parameter reading section of the code were added. Still needs to be robustly tested to make sure the parameter selection works the way it is supposed to and that all conflicts are resolved appropriately.
|  
* commit bf8a56e807454072174247d63d1719aed8db51b1
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat May 31 19:42:24 2014 -0400
| 
|     Updated documentation and defaults file. Added --use-efficiencies flag, which allows users to specify whether or not they want the output in dimensionless units or not.
|  
* commit 7c046d96e70a68c93ed628022ee34ce92fb1fd09
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat May 31 14:55:32 2014 -0400
| 
|     Tested changes on metis
|  
* commit cbb579820d037639d03133f580d88ab24f092c13
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat May 31 13:11:06 2014 -0400
| 
|     Updated documentation and README file(s).
|  
* commit 248b1cadef863a0c0e2a10737dca74e56e4d087a
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri May 30 18:22:05 2014 -0400
| 
|     Edited .defaults.in for spacing
|  
* commit ebfc053885ba7112fd5967eedc0712173a6af4d8
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri May 30 18:11:50 2014 -0400
| 
|     edited .gitignore to untrack data output files.
|  
* commit ad75827b3e51ebc1bba4de80b24221fa1a75dce1
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri May 30 18:07:54 2014 -0400
| 